# piolib-modbus

./: .gitignore  .gitmodules  library.json  platformio.ini
doc/: modbus.ods
glue/firmware/application/: application.h
glue/firmware/subsystem/: modbus_iface.h
lib/scaffold/: scaffold.c  scaffold.h
python/: .gitattributes  MANIFEST.in  setup.cfg  setup.py
python/ebs/modbus/: __init__.py  decoder.py  device.py  events.py  hotplug.py
scaffold/docs/: modbus.ods
scaffold/test/firmware/src/app/: application_descriptors.c  main.c
scaffold/test/firmware/src/bsp/: board.h  board_lp5529.h  uc_msp430f5529.h
scaffold/test/firmware/src/bsp/hal/: CMakeLists.txt
scaffold/test/firmware/src/bsp/hal/uc/: CMakeLists.txt  entropy.h  gpio.h  map.h  uart.h  usb.h
scaffold/test/firmware/src/bsp/hal/uc/impl/: core_impl.h  gpio_impl.c  id_impl.c  uart_handlers.c  usb_handlers.h  usb_impl.h  usbcdc_impl.h
scaffold/test/firmware/src/bsp/hal/uc/impl/usb-impl/: usb_irq_handler.c
scaffold/test/firmware/src/bsp/hal/uc/impl/usb-impl/USB_API/USB_HID_API/: usbhid_event_handlers.h
scaffold/test/firmware/src/bsp/hal/uc/impl/usb-impl/USB_API/USB_MSC_API/: usbmsc.h  usbmsc_scsi.h
scaffold/test/firmware/src/bsp/hal/uc/impl/usb-impl/info/: MSP430USBDesc.xml
scaffold/test/firmware/src/sys/: CMakeLists.txt
scaffold/test/software/: modbus.py  test_fcode_bits.py  test_fcode_regs.py
scaffold/tests/firmware/hal-modbus-test/src/: .directory  CMakeLists.txt
scaffold/tests/firmware/hal-modbus-test/src/app/: CMakeLists.txt  application.h  test_modbus.c  test_modbus.h
scaffold/tests/firmware/hal-modbus-test/src/application/: CMakeLists.txt  application.h  devicemap.h  main.c
scaffold/tests/firmware/hal-modbus-test/src/bsp/: CMakeLists.txt  board_lp5529.h  board_pum_lp5529.h  uc_msp430f5529.h  uc_pum.h  uc_pum_lp5529.h
scaffold/tests/firmware/hal-modbus-test/src/bsp/hal/uc/: adc.h  core.h  hal_uc.h  timer.h  usbcdc.h
scaffold/tests/firmware/hal-modbus-test/src/bsp/hal/uc/impl/: CMakeLists.txt  core_impl.c  entropy_impl.c  gpio_impl.h  id_impl.h  timer_handlers.c  timer_handlers.h  timer_impl.c  timer_impl.h  uart_handlers.h  uart_impl.c  uart_impl.h  uc_types_impl.h
scaffold/tests/firmware/hal-modbus-test/src/bsp/hal/uc/impl/usb-impl/: CMakeLists.txt  usb_event_handlers.c  usb_event_handlers.h
scaffold/tests/firmware/hal-modbus-test/src/bsp/hal/uc/impl/usb-impl/USB_API/USB_Common/: usb.c  usb.h  usbdma.c
scaffold/tests/firmware/hal-modbus-test/src/bsp/hal/uc/impl/usb-impl/info/: MSP430_CDC.inf  README.md
scaffold/tests/firmware/hal-modbus-test/src/hal-uc/: hal_uc.h  hal_uc_core.h  hal_uc_timer.h  hal_uc_uart.h  hal_uc_usb.h  hal_uc_usbcdc.h
scaffold/tests/firmware/hal-modbus-test/src/peripherals/: uart_handlers.c  uart_impl.c  uart_impl.h
scaffold/tests/firmware/hal-modbus-test/src/subsystem/: CMakeLists.txt  bc_iface.h  modbus_iface.c  modbus_iface.h  subsystems.h  time_iface.c  time_iface.h  ucdm_iface.c  ucdm_iface.h
scaffold/tests/firmware/hal-modbus-test/src/uc-impl/: CMakeLists.txt  core_impl.c  core_impl.h  gpio_impl.c  timer_handlers.c  timer_impl.c  timer_impl.h  uart_handlers.c  uart_impl.c  uart_impl.h  uc_map_impl.h  usb_impl.h  usbcdc_impl.h
scaffold/tests/firmware/hal-modbus-test/src/uc-impl/usb-impl/: descriptors.c  usb_irq_handler.c  usb_irq_handler.h
scaffold/tests/firmware/hal-modbus-test/src/uc-impl/usb-impl/USB_API/USB_CDC_API/: usbcdc_event_handlers.c  usbcdc_event_handlers.h
scaffold/tests/firmware/hal-modbus-test/src/uc-impl/usb-impl/USB_API/USB_Common/: usb.c
scaffold/tests/firmware/hal-modbus-test/src/uc-impl/usb-impl/USB_API/USB_HID_API/: usbhid.c
scaffold/tests/firmware/hal-modbus-test/src/uc-impl/usb-impl/USB_API/USB_MSC_API/: usbmsc_event_handling.h  usbmsc_req.c
scaffold/tests/firmware/hal-modbus-test/src/uc-impl/usb-impl/USB_API/USB_PHDC_API/: usbphdc.c
scaffold/tests/software/: conftest.py  modbus-test.py  modbus.py  test_fcode_control.py  test_fcode_other.py  test_fcode_regs.py
src/: CMakeLists.txt  config.h  config.h.in  crc.c  diagnostics.c  diagnostics.h  dispatch.c  dispatch.h  fcode_bits.c  fcode_bits.h  fcode_common.c  fcode_common.h  fcode_control.c  fcode_control.h  fcode_regs.c  fcode_regs.h  fcode_special.c  fcode_special.h  fcodes.c  fcodes.h  fcodes_common.c  fcodes_common.h  fcodes_config.h  hotplug.c  hotplug.h  interface.c  interface.h  modbus.c  modbus.h
src/aduformat/: CMakeLists.txt  crc-msp430-elf.S  crc.c  uart.c  uart.h
src/fcodes/: CMakeLists.txt  bits.c  bits.h  common.c  common.h  control.c  crlen.c  eit.c  regs.c  regs.h  special.c  special.h
src/modbus/: config.h  diagnostics.c  diagnostics.h  dispatch.c  dispatch.h  hotplug.h  interface.h  modbus.c  modbus.h
src/modbus/aduformat/: crc.h  uart.c  uart.h
src/modbus/fcodes/: bits.c  common.h  control.h  crlen.h  eit.h  regs.c  special.c  special.h
test/firmware/src/: CMakeLists.txt
test/firmware/src/app/: CMakeLists.txt  application.h  application_descriptors.c  devicemap.h  main.c  test_modbus.c
test/firmware/src/bsp/hal/: uc.h
test/firmware/src/bsp/hal/uc/: id.h  types.h
test/firmware/src/bsp/hal/uc/impl/: entropy_impl.h  uc_map_impl.h
test/firmware/src/bsp/hal/uc/impl/usb-impl/: descriptors.h
test/firmware/src/bsp/hal/uc/impl/usb-impl/USB_API/USB_CDC_API/: usbcdc.c  usbcdc.h
test/firmware/src/bsp/hal/uc/impl/usb-impl/USB_API/USB_Common/: defMSP430USB.h
test/firmware/src/bsp/hal/uc/impl/usb-impl/USB_API/USB_HID_API/: usbhid.h  usbhid_req.c
test/firmware/src/bsp/hal/uc/impl/usb-impl/USB_API/USB_MSC_API/: usbmsc_scsi.c  usbmsc_state_machine.c
test/firmware/src/bsp/hal/uc/impl/usb-impl/USB_API/USB_PHDC_API/: usbphdc.h
test/firmware/src/doc/: Doxyfile.in
test/firmware/src/sys/: CMakeLists.txt  rand.h  sys.h  time.h  time_if.c
test/include/: application.h
test/software/: conftest.py  events.py  modbus.py  pymodbus_ebs.py  test_fcode_bits.py  test_fcode_control.py  test_fcode_regs.py
test/test_control/: test_control.c
test/test_crc/: test_crc.c
test/test_dispatch/: test_dispatch.c
test/test_meta/: test_meta.c
