
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0007 NEW)

PROJECT(modbus C)
SET(modbus_VERSION_MAJOR 1)
SET(modbus_VERSION_MINOR 0)
SET(modbus_VERSION_PATCH 0)
SET(modbus_VERSION_TWEAK 0)

SET(TMP_PROJECT_DESCRIPTION "Transport agnostic Modbus State Machine implementation for Embedded systems"
        CACHE STRING "Project Description")

SET(CMAKE_INSTALL_PREFIX ${PLATFORM_PACKAGES_PATH})
SET(PUBLIC_INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
        
FIND_PACKAGE("bytebuf" REQUIRED)
FIND_PACKAGE("ucdm" REQUIRED)
        
FILE(GLOB SOURCES *.c)
FILE(GLOB_RECURSE HEADERS *.h)
ADD_PLATFORM_LIBRARY(modbus STATIC "bytebuf ucdm" ${SOURCES})
INSTALL_PLATFORM_LIBRARY(modbus ${HEADERS})
