
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
CMAKE_POLICY(SET CMP0007 NEW)

SET(LIBRARY_NAME    modbus)

PROJECT(${LIBRARY_NAME} C)

SET(PROJECT_DESCRIPTION     "Transport Agnostic Modbus State Machine Implementation for Embedded Systems")
SET(PROJECT_AUTHOR_NAME     "Chintalagiri Shashank")
SET(PROJECT_AUTHOR_EMAIL    "shashank.chintalagiri@gmail.com")
SET(PROJECT_LICENSE         "GPLv3")
SET(PROJECT_VERSION_MAJOR   1)
SET(PROJECT_VERSION_MINOR   1)
SET(PROJECT_VERSION_PATCH   0)
SET(PROJECT_VERSION_TWEAK   0)

FIND_PACKAGE("bytebuf" REQUIRED)
FIND_PACKAGE("ucdm" REQUIRED)
FIND_PACKAGE("time" REQUIRED)

IF(NOT ${CMAKE_CURRENT_SOURCE_DIR} STREQUAL ${CMAKE_SOURCE_DIR})
    FALLBACK_DEFAULT(MODBUS_APPLICATION_INCLUDE "#include \"app/application.h\"")
ENDIF()

FALLBACK_DEFAULT(MODBUS_ADU_FORMAT              "MODBUS_ADUFORMAT_UART")
FALLBACK_DEFAULT(MODBUS_ADU_MAXLEN              "256")
FALLBACK_DEFAULT(MODBUS_DEFAULT_DEVICE_ADDRESS  "0x05")
FALLBACK_DEFAULT(MODBUS_USE_TIMEOUTS            "1")

FALLBACK_DEFAULT(MB_SUPPORT_FC_RD_COILS         "0")
FALLBACK_DEFAULT(MB_SUPPORT_FC_RD_INPUTS        "0")
FALLBACK_DEFAULT(MB_SUPPORT_FC_RD_HREG          "1")
FALLBACK_DEFAULT(MB_SUPPORT_FC_RD_IREG          "1")
FALLBACK_DEFAULT(MB_SUPPORT_FC_WR_SCOIL         "1")
FALLBACK_DEFAULT(MB_SUPPORT_FC_WR_SREG          "1")
FALLBACK_DEFAULT(MB_SUPPORT_FC_RD_EXCST         "1")
FALLBACK_DEFAULT(MB_SUPPORT_FC_GT_CECNT         "1")
FALLBACK_DEFAULT(MB_SUPPORT_FC_GT_CELOG         "1")
FALLBACK_DEFAULT(MB_SUPPORT_FC_WR_MCOILS        "0")
FALLBACK_DEFAULT(MB_SUPPORT_FC_WR_MREGS         "1")
FALLBACK_DEFAULT(MB_SUPPORT_FC_REP_SID          "0")
FALLBACK_DEFAULT(MB_SUPPORT_FC_RD_FREC          "0")
FALLBACK_DEFAULT(MB_SUPPORT_FC_WR_FREC          "0")
FALLBACK_DEFAULT(MB_SUPPORT_FC_WR_REGM          "1") 
FALLBACK_DEFAULT(MB_SUPPORT_FC_RW_MREGS         "1")
FALLBACK_DEFAULT(MB_SUPPORT_FC_RD_FIFOQ         "0")
FALLBACK_DEFAULT(MB_SUPPORT_FC_EIT              "1")
FALLBACK_DEFAULT(MB_SUPPORT_SFC_EIT_CANOPEN     "0")
FALLBACK_DEFAULT(MB_SUPPORT_SFC_EIT_RDDEVID     "1")
FALLBACK_DEFAULT(MB_SUPPORT_FC_DIAGNOSTICS      "1")

INCLUDE(ebs/lib-conf)

FILE(GLOB_RECURSE SOURCES *.c)
FILE(GLOB_RECURSE HEADERS *.h)

ADD_PLATFORM_LIBRARY(modbus STATIC "bytebuf ucdm time" ${SOURCES})

IF(${CMAKE_CURRENT_SOURCE_DIR} STREQUAL ${CMAKE_SOURCE_DIR})
    INSTALL_PLATFORM_LIBRARY(modbus ${HEADERS})
    INCLUDE(ebs/lib-doc)
ENDIF()
