
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
CMAKE_POLICY(SET CMP0007 NEW)

SET(LIBRARY_NAME    modbus)

PROJECT(${LIBRARY_NAME} C)

SET(PROJECT_DESCRIPTION     "Transport Agnostic Modbus State Machine Implementation for Embedded Systems")
SET(PROJECT_AUTHOR_NAME     "Chintalagiri Shashank")
SET(PROJECT_AUTHOR_EMAIL    "shashank.chintalagiri@gmail.com")
SET(PROJECT_LICENSE         "GPLv3")
SET(PROJECT_VERSION_MAJOR   1)
SET(PROJECT_VERSION_MINOR   1)
SET(PROJECT_VERSION_PATCH   0)
SET(PROJECT_VERSION_TWEAK   0)

FIND_PACKAGE("ds" REQUIRED)
FIND_PACKAGE("ucdm" REQUIRED)
FIND_PACKAGE("time" REQUIRED)

IF(NOT ${CMAKE_CURRENT_SOURCE_DIR} STREQUAL ${CMAKE_SOURCE_DIR})
    FALLBACK_DEFAULT(MODBUS_APPLICATION_INCLUDE "#include \"app/application.h\"")
ENDIF()

FALLBACK_DEFAULT(APP_MODBUS_TRANSPORT           "MODBUS_APPTRANSPORT")
FALLBACK_DEFAULT(MODBUS_PLUGGABLE_TRANSPORTS    0)

FALLBACK_DEFAULT(MODBUS_ADU_FORMAT              "MODBUS_ADUFORMAT_UART")
FALLBACK_DEFAULT(MODBUS_ADU_MAXLEN              "256")
FALLBACK_DEFAULT(MODBUS_DEFAULT_DEVICE_ADDRESS  "0x05")
FALLBACK_DEFAULT(MODBUS_USE_TIMEOUTS            "1")

FALLBACK_DEFAULT(MB_SUPPORT_BITFUNCS            "1")
FALLBACK_DEFAULT(MB_SUPPORT_REGFUNCS            "1")
FALLBACK_DEFAULT(MB_SUPPORT_FILEFUNCS           "0")
FALLBACK_DEFAULT(MB_SUPPORT_CELOGFUNCS          "0")

FALLBACK_DEFAULT(MB_SUPPORT_FC_RD_COILS         MB_SUPPORT_BITFUNCS)
FALLBACK_DEFAULT(MB_SUPPORT_FC_RD_INPUTS        MB_SUPPORT_BITFUNCS)
FALLBACK_DEFAULT(MB_SUPPORT_FC_RD_HREG          MB_SUPPORT_REGFUNCS)
FALLBACK_DEFAULT(MB_SUPPORT_FC_RD_IREG          MB_SUPPORT_REGFUNCS)
FALLBACK_DEFAULT(MB_SUPPORT_FC_WR_SCOIL         MB_SUPPORT_BITFUNCS)
FALLBACK_DEFAULT(MB_SUPPORT_FC_WR_SREG          MB_SUPPORT_REGFUNCS)
FALLBACK_DEFAULT(MB_SUPPORT_FC_RD_EXCST         "1")
FALLBACK_DEFAULT(MB_SUPPORT_FC_GT_CECNT         MB_SUPPORT_CELOGFUNCS)
FALLBACK_DEFAULT(MB_SUPPORT_FC_GT_CELOG         MB_SUPPORT_CELOGFUNCS)
FALLBACK_DEFAULT(MB_SUPPORT_FC_WR_MCOILS        MB_SUPPORT_BITFUNCS)
FALLBACK_DEFAULT(MB_SUPPORT_FC_WR_MREGS         MB_SUPPORT_REGFUNCS)
FALLBACK_DEFAULT(MB_SUPPORT_FC_REP_SID          "0")
FALLBACK_DEFAULT(MB_SUPPORT_FC_RD_FREC          MB_SUPPORT_FILEFUNCS)
FALLBACK_DEFAULT(MB_SUPPORT_FC_WR_FREC          MB_SUPPORT_FILEFUNCS)
FALLBACK_DEFAULT(MB_SUPPORT_FC_WR_REGM          MB_SUPPORT_REGFUNCS) 
FALLBACK_DEFAULT(MB_SUPPORT_FC_RW_MREGS         MB_SUPPORT_REGFUNCS)
FALLBACK_DEFAULT(MB_SUPPORT_FC_RD_FIFOQ         "0")
FALLBACK_DEFAULT(MB_SUPPORT_FC_EIT              "1")
FALLBACK_DEFAULT(MB_SUPPORT_SFC_EIT_CANOPEN     "0")
FALLBACK_DEFAULT(MB_SUPPORT_SFC_EIT_RDDEVID     "1")
FALLBACK_DEFAULT(MB_SUPPORT_FC_DIAGNOSTICS      "1")

INCLUDE(ebs/lib-conf)

ADD_FILES(HEADERS dispatch.h
                  diagnostics.h
                  modbus.h
                  interface.h
                  hotplug.h)

ADD_FILES(SOURCES modbus.c
                  diagnostics.c
                  interface.c
                  dispatch.c                                                                          
                  hotplug.c)

ADD_SUBDIRECTORY(aduformat)
ADD_SUBDIRECTORY(fcodes)


MESSAGE(${SOURCES})
MESSAGE(${HEADERS})

ADD_PLATFORM_LIBRARY(modbus STATIC "ds ucdm time hal-uc-usb" ${SOURCES})

IF(${CMAKE_CURRENT_SOURCE_DIR} STREQUAL ${CMAKE_SOURCE_DIR})
    INSTALL_PLATFORM_LIBRARY(modbus ${HEADERS})
    INCLUDE(ebs/lib-doc)
ENDIF()
