CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0007 NEW)


PROJECT(hal-modbus-test C)
SET(hal-modbus-test-hal_VERSION_MAJOR 0)
SET(hal-modbus-test-hal_VERSION_MINOR 1)
SET(hal-modbus-test-hal_VERSION_PATCH 0)
SET(hal-modbus-test-hal_VERSION_TWEAK 0)
SET(TMP_PROJECT_DESCRIPTION "MODBUS test firmware built on top of the Hardware Abstraction Layers"
        CACHE STRING "Project Description")

SET(DOC_HTML_INSTALL	True)

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/bsp ${INCLUDE_DIRECTORIES}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/hal-uc ${INCLUDE_DIRECTORIES}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/uc-impl ${INCLUDE_DIRECTORIES}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/subsystem ${INCLUDE_DIRECTORIES}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/application ${INCLUDE_DIRECTORIES}")

ADD_SUBDIRECTORY(uc-impl)
ADD_SUBDIRECTORY(hal-uc)
ADD_SUBDIRECTORY(bsp)
ADD_SUBDIRECTORY(subsystem)
ADD_SUBDIRECTORY(application)

INSTALL(SCRIPT default-install.cmake)
