
FIND_PACKAGE("msp430-driverlib" REQUIRED)

FOREACH(device ${SUPPORTED_DEVICES})
    IF(device MATCHES "msp430f(5|6)[a-z|0-9]*$")
        LIST(APPEND RESULTV ${device})
    ENDIF(device MATCHES "msp430f(5|6)[a-z|0-9]*$")
ENDFOREACH(device ${SUPPORTED_DEVICES})

SET(SUPPORTED_DEVICES ${RESULTV})

IF(SUPPORTED_DEVICES)
    FILE(GLOB_RECURSE SOURCES *.c)
    FILE(GLOB_RECURSE HEADERS *.h)
    ADD_PLATFORM_LIBRARY(msp430-usbapi STATIC "msp430-driverlib" ${SOURCES})
ENDIF(SUPPORTED_DEVICES)
